test/testdata/bool/not_indexable_error.lox
true[0]; // error: 'bool' value is not indexable
